fix issue with classpath